--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="centerWrap">
     <div id="gameContainer">
       <button id="fullscreenBtn" onclick="goFullScreen()" title="Fullscreen">
-        <img src="assets/FS.png" alt="Fullscreen" style="width:40px; height:40px;">
+        <img src="assets/Full.png" alt="Fullscreen" style="width:40px; height:40px;">
       </button>
       <canvas id="gameCanvas" width="800" height="700"></canvas>
     </div>
