Revert "Fix comprehensive MEMOMU game bugfixes and UI improvements"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <div id="centerWrap">
     <div id="gameContainer">
+      <button id="fullscreenBtn" onclick="goFullScreen()" title="Fullscreen">
+        <img src="assets/Full.png" alt="Fullscreen" style="width:40px; height:40px;">
+      </button>
       <canvas id="gameCanvas" width="800" height="700"></canvas>
     </div>
   </div>
